Archive2/2a/82347f3846a475/output
main.cpp:1:22: error: extra tokens at end of #include directive
  #include <iostream> #include <iostream>
                      ^
main.cpp:2:20: error: extra tokens at end of #include directive
 #include <iomanip> #include <iomanip>
                    ^
main.cpp:3:19: error: extra tokens at end of #include directive
 #include <string> #include <string>
                   ^
main.cpp:4:16: error: extra tokens at end of #include directive
 #include <map> #include <carte>
                ^
main.cpp:5:19: error: extra tokens at end of #include directive
 #include <random> #include <aléatoire>
                   ^
main.cpp:6:18: error: extra tokens at end of #include directive
 #include <cmath> #include <cmath>
                  ^
main.cpp:17:55: warning: multi-character character constant [-Wmultichar]
     std:: cout << "Randomly-chosen mean: " << mean << ' \n ' ; std :: cout << "choisis au hasard moyenne:" << << signifie '\ n';
                                                       ^
main.cpp:17:123: error: unknown escape sequence: '\040'
     std:: cout << "Randomly-chosen mean: " << mean << ' \n ' ; std :: cout << "choisis au hasard moyenne:" << << signifie '\ n';
                                                                                                                           ^
main.cpp:17:123: warning: multi-character character constant [-Wmultichar]
main.cpp:30:83: warning: multi-character character constant [-Wmultichar]
                   << p. first << ' ' << std:: string ( p. second / 200 , '*' ) << ' \n ' ; << P premier << '' <<. std :: string (p secondes / 200,. '*') << '\ n';
                                                                                   ^
main.cpp:30:108: error: empty character constant
                   << p. first << ' ' << std:: string ( p. second / 200 , '*' ) << ' \n ' ; << P premier << '' <<. std :: string (p secondes / 200,. '*') << '\ n';
                                                                                                            ^
main.cpp:30:157: error: unknown escape sequence: '\040'
                   << p. first << ' ' << std:: string ( p. second / 200 , '*' ) << ' \n ' ; << P premier << '' <<. std :: string (p secondes / 200,. '*') << '\ n';
                                                                                                                                                             ^
main.cpp:30:157: warning: multi-character character constant [-Wmultichar]
main.cpp:8:14: error: expected initializer before 'int'
 int main ( ) int main ()
              ^
